// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TopBar utils generateMarketDropdownProps should generate S&P Indices market dropdown props 1`] = `
Object {
  "options": Array [
    Object {
      "productIds": Array [
        "SPBTC",
        "USDC",
      ],
      "value": "SPBTC",
    },
    Object {
      "productIds": Array [
        "SPETH",
        "USDC",
      ],
      "value": "SPETH",
    },
  ],
  "searchable": true,
}
`;

exports[`TopBar utils generateMarketDropdownProps should generate S&P Platts market dropdown props 1`] = `
Object {
  "options": Array [
    Object {
      "productIds": Array [
        "BATCH04",
        "USDC",
      ],
      "value": "BATCH04",
    },
    Object {
      "productIds": Array [
        "BATCP04",
        "USDC",
      ],
      "value": "BATCP04",
    },
    Object {
      "productIds": Array [
        "CNCAD00",
        "USDC",
      ],
      "value": "CNCAD00",
    },
    Object {
      "productIds": Array [
        "ACRCA00",
        "USDC",
      ],
      "value": "ACRCA00",
    },
  ],
  "searchable": true,
}
`;

exports[`TopBar utils generateMarketDropdownProps should generate crypto market dropdown props 1`] = `
Object {
  "options": Array [
    Object {
      "productIds": Array [
        "BTC",
        "USDC",
      ],
      "value": "BTCUSDC",
    },
    Object {
      "productIds": Array [
        "AVAX",
        "USDC",
      ],
      "value": "AVAXUSDC",
    },
    Object {
      "productIds": Array [
        "SOL",
        "USDC",
      ],
      "value": "SOLUSDC",
    },
  ],
  "searchable": true,
}
`;

exports[`TopBar utils generateMarketDropdownProps should generate market dropdown props 1`] = `
Object {
  "options": Array [
    Object {
      "productIds": Array [
        "Crypto",
      ],
      "value": "Crypto",
    },
    Object {
      "productIds": Array [
        "SPPlatts",
      ],
      "value": "SPPlatts",
    },
    Object {
      "productIds": Array [
        "SPIndices",
      ],
      "value": "SPIndices",
    },
  ],
  "searchable": true,
}
`;
